# PCSS

./: .gitignore  README.md
pract_1/: CMakeLists.txt  calculatexy.cpp  calculatexy.h  checknumber.cpp  checknumber.h  checkpoint.cpp  checkpoint.h  checksquare.cpp  checksquare.h  checktriangle.cpp  checktriangle.h  main.cpp  mainwindow.ui
pract_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
pract_2/client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  requests.cpp  requests.h
pract_2/server/client/: CMakeLists.txt
pract_2/server/server/include/: RequestHandler.h
pract_2/server/server/src/: RequestHandler.cpp
pract_3/client/: CMakeLists.txt  main.cpp  request_exec.cpp  request_exec.h  task_handler.cpp  task_handler.h
pract_3/server/: CMakeLists.txt
pract_3/server/server/: CMakeLists.txt
pract_3/server/server/include/: RequestHandler.h
pract_3/server/server/src/: RequestHandler.cpp
